# wavernn_c_mb

./: CMakeLists.txt  README.md  WaveRNNVocoder.cpp  convert_model_mb.py  net_impl.cpp  net_impl.h  test.py  test_wavernnvocoder.py  vocoder.cpp  vocoder.h  wavernn.cpp  wavernn.h
16000/biaobei_nostd_mel/: 000001.npy  000002.npy
16000/txt/: 000001.txt  000002.txt
